# metasense

./: .dockerignore  .gitignore  .nf-core.yml  CHANGELOG.md  CITATIONS.md  LICENSE  README.md  main.nf  modules.json  nextflow.config  nextflow_schema.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: branch.yml  ci.yml  fix-linting.yml
assets/: adaptivecard.json  email_template.html  email_template.txt  jupyter_reports.html  jupyter_reports_config.yml  methods_description_template.yml  multiqc_config.yml  schema_input.json  sendmail_template.txt
assets/notebooks/: metadata.ipynb  report.ipynb  versions.ipynb
conf/: base.config  modules.config  test.config  test_full.config
docker/bracken_visualize/: Dockerfile  pyproject.toml
docker/jupyter-reports/: Dockerfile  pyproject.toml
docs/: README.md  output.md  usage.md
lib/: NfcoreTemplate.groovy  WorkflowMain.groovy  WorkflowMetasense.groovy
modules/local/: filter_bracken_out.nf  samplesheet_check.nf  samplesheet_generate  unpack_database.nf
modules/local/bracken/combinebrackenoutputs/: main.nf
modules/local/bracken/filter/: main.nf
modules/local/bracken/plot/: main.nf
modules/local/jupyter-reports/: main.nf
modules/local/jupyter-reports/templates/: reports.py
modules/nf-core/bracken/bracken/: main.nf
modules/nf-core/kraken2/kraken2/: main.nf
modules/nf-core/seqtk/sample/: main.nf
workflows/: metasense.nf
